--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
         Here I am folks!
     </head>
     <body>
+        <h1>Helo world!</h1>
         <p>Hello <i>new</i> Page</p>
-        <h1>Heloo world!</h1>
     </body>
 </html>
